results-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: results-app-pod
  labels:
    name: results-app-pod
    app: demo-voting-app
spec:
  containers:
    - name: results-app-pod
      image: results-service:4.0
      ports:
        - containerPort: 8085
