voting-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    name: voting-service
    app: demo-voting-app
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      #nodePort: 30004
  selector:
    name: voting-app-pod
    app: demo-voting-app
