voting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votingapp-ingress
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: votingapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting-service
            port:
              number: 8083
      - path: /results
        pathType: Prefix
        backend:
          service:
            name: results-service
            port:
              number: 8085
